--- a/TabooApp/index.html
+++ b/TabooApp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>TABOO</h1>
+    <h1>TABOOOO</h1>
 
     <div id="taboo-card">
         <p id="word-text"></p>
