--- a/TabooApp/index.html
+++ b/TabooApp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>TABOOOO</h1>
+    <h1>TABOOOL</h1>
 
     <div id="taboo-card">
         <p id="word-text"></p>
@@ -19,7 +19,7 @@
         <p id="forbidden4-text"></p>
         <p id="forbidden5-text"></p>
     </div>
-
+/Users/zbychor/Documents/GitHub/rutkowskiz.github.io/TabooApp/index.html
     <button id="show-word">KOLEJNE HASŁO</button>
     
 
