--- a/TabooApp/index.html
+++ b/TabooApp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Moja pierwsza strona</title>
+    <title>Taboo Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
